# ffmtrans

./: .gitignore  Cargo.toml
examples/: test.rs  test2.rs  trans.rs
src/: ffmpeg.rs  filter.rs  lib.rs  main.rs
src/serve/: route.rs
src/trans/: ffmpeg.rs  filter.rs  mod.rs  sync.rs
