[package]
name = "ffmtrans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "5.1.1"
ffmpeg-sys-next = "5.1.1"
actix-web = "4"
serde = {version = "1.0.162",features = ["derive"]}
crossbeam-channel = "0.5.8"
